--- a/src/main/webapp/WEB-INF/templates/role/list.html
+++ b/src/main/webapp/WEB-INF/templates/role/list.html
@@ -9,19 +9,26 @@
     <link rel="icon" th:href="@{/static/images/favicon.ico}"/>
     <title>shoulder</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/bootstrap/bootstrap.min.css}">
     <!-- Font Awesome -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/font-awesome.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/bootstrap/font-awesome.min.css}">
     <!-- NProgress -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/nprogress.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/bootstrap/nprogress.css}">
+    <!--iCheck -->
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/bootstrap/green.css}">
     <!-- Datatables -->
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/dataTables.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/buttons.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/fixedHeader.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/responsive.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/scroller.bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/select.dataTables.min.css}">
+    <!-- bootstrap-datetimepicker css -->
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datepicker/bootstrap-datetimepicker.min.css}">
     <!-- Custom Theme Style -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/custom.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/bootstrap/custom.min.css}">
+    <!--layUi js-->
+    <script type="text/javascript" th:src="@{/static/js/layui/layui.all.js}"></script>
 </head>
 
 <body class="nav-md">
@@ -48,7 +55,8 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="x_content">
-                            <table class="table table-hover">
+                            <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target=".role-modal" onclick="addRole()"><span>新增</span></button>
+                            <table id="roleTable" class="table table-striped table-hover table-bordered">
                                 <thead>
                                 <tr>
                                     <th>序号</th>
@@ -63,12 +71,51 @@
                                     <td th:text="${role.name}"></td>
                                     <td th:text="${role.desc}"></td>
                                     <td>
-                                        <a type="button" class="btn btn-round btn-info btn-xs" th:href="@{/user/toUpdateRole.do(id=${role.id})}">编辑</a>
-                                        <button type="button" class="btn btn-round btn-danger btn-xs">删除</button>
+                                        <button type="button" class="btn btn-info btn-xs"><i class="fa fa-edit"></i></button>
+                                        <button type="button" class="btn btn-dark btn-xs"><i class="fa fa-trash"></i></button>
                                     </td>
                                 </tr>
                                 </tbody>
                             </table>
+                        </div>
+
+                        <div class="modal fade role-modal" id="roleModal" tabindex="-1" role="dialog" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span>
+                                        </button>
+                                        <h4 class="modal-title">用户详情</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form id="roleForm" class="form-horizontal form-label-left" novalidate>
+                                            <input type="hidden" id="roleId" name="id">
+                                            <div class="item form-group">
+                                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">角色名<span class="required">*</span>
+                                                </label>
+                                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                                    <input type="text" id="name" class="form-control col-md-7 col-xs-12" name="name" placeholder="Smith" required="required">
+                                                </div>
+                                            </div>
+                                            <div class="item form-group">
+                                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="desc">描述</span>
+                                                </label>
+                                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                                    <textarea id="desc" class="form-control col-md-7 col-xs-12" name="desc" data-parsley-trigger="keyup" data-parsley-minlength="20" data-parsley-maxlength="100" data-parsley-minlength-message="Come on! You need to enter at least a 20 caracters long comment.."
+                                                              data-parsley-validation-threshold="10"></textarea>
+                                                </div>
+                                            </div>
+                                            <div class="ln_solid"></div>
+                                            <div class="item form-group">
+                                                <div class="text-center">
+                                                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                                                    <button type="submit" class="btn btn-primary" onclick="save()">保存</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -83,14 +130,122 @@
 </div>
 
 <!-- jQuery -->
-<script type="text/javascript" th:src="@{/static/js/common/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/jquery/jquery.min.js}"></script>
 <!-- Bootstrap -->
-<script type="text/javascript" th:src="@{/static/js/common/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/bootstrap/bootstrap.min.js}"></script>
 <!-- FastClick -->
-<script type="text/javascript" th:src="@{/static/js/common/fastclick.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/bootstrap/fastclick.js}"></script>
 <!-- NProgress -->
-<script type="text/javascript" th:src="@{/static/js/common/nprogress.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/bootstrap/nprogress.js}"></script>
+<!-- iCheck -->
+<script type="text/javascript" th:src="@{/static/js/bootstrap/icheck.min.js}"></script>
+<!-- Datatables -->
+<script type="text/javascript" th:src="@{/static/js/datatables/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/dataTables.bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/dataTables.buttons.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/buttons.bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/buttons.flash.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/buttons.html5.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/buttons.print.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/dataTables.fixedHeader.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/dataTables.keyTable.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/dataTables.responsive.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/responsive.bootstrap.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/dataTables.scroller.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/jszip.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/pdfmake.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/vfs_fonts.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datatables/dataTables.select.min.js}"></script>
+<!-- Validate-->
+<script type="text/javascript" th:src="@{/static/js/jquery/validator.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/jquery/parsley.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/jquery/zh_cn.js}"></script>
+<!-- bootstrap-datetimepicker js -->
+<script type="text/javascript" th:src="@{/static/js/datepicker/bootstrap-datetimepicker.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/datepicker/bootstrap-datetimepicker.zh-CN.js}" charset="UTF-8"></script>
+<!--添加读取json体的handlebars模板引擎-->
+<script type="text/javascript" th:src="@{/static/js/bootstrap/handlebars-v4.2.0.js}"></script>
 <!-- Custom Theme Scripts -->
-<script type="text/javascript" th:src="@{/static/js/common/custom.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/bootstrap/custom.min.js}"></script>
+<script type="text/javascript" th:inline="javascript">
+    /*<![CDATA[*/
+    var BASE = /*[[@{/}]]*/'';
+    /*]]>*/
+
+    var table, layer;
+
+    layui.use('layer', function () {
+        layer = layui.layer;
+    });
+    //刷新
+    var loadingIndex = null;
+    //编辑或新增
+    var addOrEdit = true;
+
+    $(document).ready(function () {
+        //初始化表
+        table = $("#roleTable").DataTable({
+            "destroy": true,
+            "processing": false,
+            "bSort": false,
+            "searching": false,
+            "lengthMenu": [ [10, 20, 30],['10','20','30'] ],//自定义分页长度
+            "oLanguage": {//多语言配置
+                "sProcessing": "加载中......",
+                "sLengthMenu": "每页显示 _MENU_ 条记录",
+                "sZeroRecords": "对不起，查询不到相关数据！",
+                "sEmptyTable": "无数据",
+                "sInfo": "当前显示 _START_ 到 _END_ 条，共 _TOTAL_ 条记录",
+                "sInfoFiltered": "数据表中共为 _MAX_ 条记录",
+                "sSearch": "搜索",
+                "oPaginate": {
+                    "sFirst": "首页",
+                    "sPrevious": "上一页",
+                    "sNext": "下一页",
+                    "sLast": "末页"
+                }
+            },
+            "columns": [
+                {"className": 'text-center'},
+                {"className": 'text-center'},
+                {"className": 'text-center'},
+                {"className": 'text-center'}
+            ]
+        }).draw();
+    });
+
+    function addRole() {
+        addOrEdit=true;
+        $("#roleId").val('');
+        document.getElementById("roleForm").reset();
+    }
+
+    function save() {
+        /*$("#roleForm").parsley().validate()*/
+        if (validator.checkAll("#roleForm")){
+            $.ajax({
+                type:"POST",
+                url: BASE + "role/addRole.do",
+                data: $("#roleForm").serialize(),
+                beforeSend : function(){
+                    loadingIndex = layer.msg('处理中', {icon: 16});
+                },
+                success: function (result) {
+                    if (result.code == 100) {
+                        //重新加载表格
+                        table.reload();
+                        layer.msg("新增成功", {time: 3000, icon: 1}, function () {});
+                    }else {
+                        layer.msg("新增异常" + result.msg, {time: 3000, icon: 5, shift: 6}, function () {});
+                    }
+                    //关闭modal框
+                    $("#roleModal").modal('hide');
+                    //关闭刷新框
+                    layer.close(loadingIndex);
+                }
+            })
+        }
+    }
+</script>
 </body>
 </html>
