--- a/src/main/webapp/WEB-INF/templates/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/user/list.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="x_content">
                     <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target=".bs-example-modal-lg" onclick="addUser()"><span>新增</span></button>
-                    <table id="userTable" class="table table-striped table-hover table-bordered">
+                    <table id="userTable" class="table table-hover table-bordered">
                         <thead>
                         <tr>
                             <th>#</th>
@@ -492,7 +492,7 @@
                         layer.msg("删除异常" + result.msg, {time: 3000, icon: 5, shift: 6}, function () {});
                     }
                 }
-            })
+            });
             layer.close(index);
         });
     }
