菜单角色模块完成

--- a/src/main/webapp/WEB-INF/templates/menu/list.html
+++ b/src/main/webapp/WEB-INF/templates/menu/list.html
@@ -246,7 +246,7 @@
             success: function (result) {
                 var menus = result.data;
                 $("#pid").empty();
-                $("#pid").append("<option>--选择--</option>");
+                $("#pid").append("<option value=''>--选择--</option>");
                 for (var i = 0; i < menus.length; i++) {
                     $("#pid").append("<option value='"+menus[i].id+"'>" + menus[i].name + "</option>");
                 }
